(5)Syn_chk_DeclarationStatement/y.output
Nonterminals useless in grammar

    Ss


Terminals unused in grammar

    String
    StringV
    Am
    Const


Rules useless in grammar

   24 Ss: IdM
   25   | Ss ',' Id
   26   | Id '=' StringV
   27   | Ss ',' Id '=' StringV


Grammar

    0 $accept: S1 $end

    1 S1: S1 S
    2   | S

    3 S: Int Iv ';'
    4  | Char Cc ';'
    5  | Float Ff ';'
    6  | Bool Bb ';'

    7 Iv: IdM
    8   | Iv ',' Id
    9   | Id '=' IntV
   10   | Iv ',' Id '=' IntV

   11 Cc: IdM
   12   | Cc ',' Id
   13   | Id '=' CharV
   14   | Cc ',' Id '=' CharV

   15 Ff: IdM
   16   | Ff ',' Id
   17   | Id '=' FloatV
   18   | Ff ',' Id '=' FloatV

   19 Bb: IdM
   20   | Bb ',' Id
   21   | Id '=' BoolV
   22   | Bb ',' Id '=' BoolV

   23 IdM: Id


Terminals, with rules where they appear

    $end (0) 0
    ',' (44) 8 10 12 14 16 18 20 22
    ';' (59) 3 4 5 6
    '=' (61) 9 10 13 14 17 18 21 22
    error (256)
    Int (258) 3
    Char (259) 4
    Float (260) 5
    Bool (261) 6
    String (262)
    IntV (263) 9 10
    CharV (264) 13 14
    FloatV (265) 17 18
    BoolV (266) 21 22
    StringV (267)
    Id (268) 8 9 10 12 13 14 16 17 18 20 21 22 23
    Am (269)
    Const (270)


Nonterminals, with rules where they appear

    $accept (19)
        on left: 0
    S1 (20)
        on left: 1 2
        on right: 0 1
    S (21)
        on left: 3 4 5 6
        on right: 1 2
    Iv (22)
        on left: 7 8 9 10
        on right: 3 8 10
    Cc (23)
        on left: 11 12 13 14
        on right: 4 12 14
    Ff (24)
        on left: 15 16 17 18
        on right: 5 16 18
    Bb (25)
        on left: 19 20 21 22
        on right: 6 20 22
    IdM (26)
        on left: 23
        on right: 7 11 15 19


State 0

    0 $accept: • S1 $end

    Int    shift, and go to state 1
    Char   shift, and go to state 2
    Float  shift, and go to state 3
    Bool   shift, and go to state 4

    S1  go to state 5
    S   go to state 6


State 1

    3 S: Int • Iv ';'

    Id  shift, and go to state 7

    Iv   go to state 8
    IdM  go to state 9


State 2

    4 S: Char • Cc ';'

    Id  shift, and go to state 10

    Cc   go to state 11
    IdM  go to state 12


State 3

    5 S: Float • Ff ';'

    Id  shift, and go to state 13

    Ff   go to state 14
    IdM  go to state 15


State 4

    6 S: Bool • Bb ';'

    Id  shift, and go to state 16

    Bb   go to state 17
    IdM  go to state 18


State 5

    0 $accept: S1 • $end
    1 S1: S1 • S

    $end   shift, and go to state 19
    Int    shift, and go to state 1
    Char   shift, and go to state 2
    Float  shift, and go to state 3
    Bool   shift, and go to state 4

    S  go to state 20


State 6

    2 S1: S •

    $default  reduce using rule 2 (S1)


State 7

    9 Iv: Id • '=' IntV
   23 IdM: Id •

    '='  shift, and go to state 21

    $default  reduce using rule 23 (IdM)


State 8

    3 S: Int Iv • ';'
    8 Iv: Iv • ',' Id
   10   | Iv • ',' Id '=' IntV

    ';'  shift, and go to state 22
    ','  shift, and go to state 23


State 9

    7 Iv: IdM •

    $default  reduce using rule 7 (Iv)


State 10

   13 Cc: Id • '=' CharV
   23 IdM: Id •

    '='  shift, and go to state 24

    $default  reduce using rule 23 (IdM)


State 11

    4 S: Char Cc • ';'
   12 Cc: Cc • ',' Id
   14   | Cc • ',' Id '=' CharV

    ';'  shift, and go to state 25
    ','  shift, and go to state 26


State 12

   11 Cc: IdM •

    $default  reduce using rule 11 (Cc)


State 13

   17 Ff: Id • '=' FloatV
   23 IdM: Id •

    '='  shift, and go to state 27

    $default  reduce using rule 23 (IdM)


State 14

    5 S: Float Ff • ';'
   16 Ff: Ff • ',' Id
   18   | Ff • ',' Id '=' FloatV

    ';'  shift, and go to state 28
    ','  shift, and go to state 29


State 15

   15 Ff: IdM •

    $default  reduce using rule 15 (Ff)


State 16

   21 Bb: Id • '=' BoolV
   23 IdM: Id •

    '='  shift, and go to state 30

    $default  reduce using rule 23 (IdM)


State 17

    6 S: Bool Bb • ';'
   20 Bb: Bb • ',' Id
   22   | Bb • ',' Id '=' BoolV

    ';'  shift, and go to state 31
    ','  shift, and go to state 32


State 18

   19 Bb: IdM •

    $default  reduce using rule 19 (Bb)


State 19

    0 $accept: S1 $end •

    $default  accept


State 20

    1 S1: S1 S •

    $default  reduce using rule 1 (S1)


State 21

    9 Iv: Id '=' • IntV

    IntV  shift, and go to state 33


State 22

    3 S: Int Iv ';' •

    $default  reduce using rule 3 (S)


State 23

    8 Iv: Iv ',' • Id
   10   | Iv ',' • Id '=' IntV

    Id  shift, and go to state 34


State 24

   13 Cc: Id '=' • CharV

    CharV  shift, and go to state 35


State 25

    4 S: Char Cc ';' •

    $default  reduce using rule 4 (S)


State 26

   12 Cc: Cc ',' • Id
   14   | Cc ',' • Id '=' CharV

    Id  shift, and go to state 36


State 27

   17 Ff: Id '=' • FloatV

    FloatV  shift, and go to state 37


State 28

    5 S: Float Ff ';' •

    $default  reduce using rule 5 (S)


State 29

   16 Ff: Ff ',' • Id
   18   | Ff ',' • Id '=' FloatV

    Id  shift, and go to state 38


State 30

   21 Bb: Id '=' • BoolV

    BoolV  shift, and go to state 39


State 31

    6 S: Bool Bb ';' •

    $default  reduce using rule 6 (S)


State 32

   20 Bb: Bb ',' • Id
   22   | Bb ',' • Id '=' BoolV

    Id  shift, and go to state 40


State 33

    9 Iv: Id '=' IntV •

    $default  reduce using rule 9 (Iv)


State 34

    8 Iv: Iv ',' Id •
   10   | Iv ',' Id • '=' IntV

    '='  shift, and go to state 41

    $default  reduce using rule 8 (Iv)


State 35

   13 Cc: Id '=' CharV •

    $default  reduce using rule 13 (Cc)


State 36

   12 Cc: Cc ',' Id •
   14   | Cc ',' Id • '=' CharV

    '='  shift, and go to state 42

    $default  reduce using rule 12 (Cc)


State 37

   17 Ff: Id '=' FloatV •

    $default  reduce using rule 17 (Ff)


State 38

   16 Ff: Ff ',' Id •
   18   | Ff ',' Id • '=' FloatV

    '='  shift, and go to state 43

    $default  reduce using rule 16 (Ff)


State 39

   21 Bb: Id '=' BoolV •

    $default  reduce using rule 21 (Bb)


State 40

   20 Bb: Bb ',' Id •
   22   | Bb ',' Id • '=' BoolV

    '='  shift, and go to state 44

    $default  reduce using rule 20 (Bb)


State 41

   10 Iv: Iv ',' Id '=' • IntV

    IntV  shift, and go to state 45


State 42

   14 Cc: Cc ',' Id '=' • CharV

    CharV  shift, and go to state 46


State 43

   18 Ff: Ff ',' Id '=' • FloatV

    FloatV  shift, and go to state 47


State 44

   22 Bb: Bb ',' Id '=' • BoolV

    BoolV  shift, and go to state 48


State 45

   10 Iv: Iv ',' Id '=' IntV •

    $default  reduce using rule 10 (Iv)


State 46

   14 Cc: Cc ',' Id '=' CharV •

    $default  reduce using rule 14 (Cc)


State 47

   18 Ff: Ff ',' Id '=' FloatV •

    $default  reduce using rule 18 (Ff)


State 48

   22 Bb: Bb ',' Id '=' BoolV •

    $default  reduce using rule 22 (Bb)
